<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">



    <TextView android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:text="@string/result"
              style="@style/question_theme"
              android:layout_gravity="center"
              android:layout_margin="16dp"
            />
    <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content"
            android:orientation="horizontal"
                  android:gravity="center_horizontal"
            >
        <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
                android:textSize="72sp"
                  android:text="@string/one"
                android:id="@+id/textview_mark"
                />
        <TextView android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:text="@string/out_five"
                  android:textSize="72sp"
                />

    </LinearLayout>
    <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
            android:text="@string/thanking_lbl"
              android:layout_gravity="center_horizontal"
            />
    <Button android:layout_width="wrap_content" android:layout_height="wrap_content"
           android:id="@+id/button_back_to_home"
            android:text="@string/back_to_home"
            android:layout_margin="16dp"
            android:layout_gravity="center_horizontal"
            />

</LinearLayout>