<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:layout_margin="16dp"
        >

    <TextView android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:text="@string/head_quiz"
              android:layout_marginBottom="16dp"
              android:id="@+id/textview_ques_header"
            />
    <TextView
            android:id="@+id/textview_question"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/question_theme"
            android:text="What is object in Java Represent?"
            />
  <RadioGroup android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:id="@+id/radio_grp"
          >
      <RadioButton android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:id="@+id/radio_button_1"
              />
      <RadioButton android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:id="@+id/radio_button_2"
              />
      <RadioButton android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:id="@+id/radio_button_3"
              />
      <RadioButton android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:id="@+id/radio_button_4"
               />
  </RadioGroup>

    <RelativeLayout android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:orientation="horizontal"
                  android:layout_gravity="right">

    <Button android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/prev"
            android:id="@+id/button_prev"

            />
        <Button android:layout_width="wrap_content"
                android:text="@string/next"
                android:id="@+id/button_next"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                />
    </RelativeLayout>
</LinearLayout>